--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDWruNu2MpLPCU6tzxcRm79hKqT5IVBzB8",
-    authDomain: "multiplayer-racing-e2773.firebaseapp.com",
-    databaseURL: "https://multiplayer-racing-e2773-default-rtdb.firebaseio.com",
-    projectId: "multiplayer-racing-e2773",
-    storageBucket: "multiplayer-racing-e2773.appspot.com",
-    messagingSenderId: "695142558940",
-    appId: "1:695142558940:web:68ef57282cb65bed8c1819"
+ const firebaseConfig = {
+    apiKey: "AIzaSyD2kEP5mZEyIvMUPeZAdOpMEp4PoS-4wgw",
+    authDomain: "car-racing-479eb.firebaseapp.com",
+    databaseURL: "https://car-racing-479eb-default-rtdb.firebaseio.com",
+    projectId: "car-racing-479eb",
+    storageBucket: "car-racing-479eb.appspot.com",
+    messagingSenderId: "1022689765616",
+    appId: "1:1022689765616:web:c6d48837be586935f7fa35"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
